--- a/Project.toml
+++ b/Project.toml
@@ -11,3 +11,11 @@ ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 ModernGL = "66fc600b-dfda-50eb-8b99-91cfa97b1301"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+
+[compat]
+CImGui = "1.82.0"
+ModernGL = "1.1.6"
+StaticArrays = "1.5.16"
+FileIO = "1.16.0"
+ImageCore = "0.9.4"
+ImageIO = "0.6.6"
