--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 julia = "1.6"
+CImGui = "1.82.0"
 ModernGL = "1.1.6"
 StaticArrays = "1.5.16"
 FileIO = "1.16.0"
