--- a/Project.toml
+++ b/Project.toml
@@ -6,16 +6,15 @@ version = "0.2.1"
 [deps]
 CImGui = "5d785b6c-b76f-510e-a07c-3070796c7e87"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+GLFW = "f7f18e0c-5ee9-5ccd-a5bf-e8befd85ed98"
 ImageCore = "a09fc81d-aa75-5fe9-8630-4744c3626534"
 ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
-LibCImGui = "9be01004-c4f5-478b-abeb-cb32b114cf5e"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 ModernGL = "66fc600b-dfda-50eb-8b99-91cfa97b1301"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
-LibCImGui = "~1.82"
-CImGui = "~1.82"
+CImGui = "2"
 FileIO = "1.16"
 ImageCore = "0.10"
 ImageIO = "0.6"
